# MemDiver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  app.py  cli.py  config.json  legacy_app.py  pyproject.toml  run.py
algorithms/: __init__.py  base.py  registry.py
api/: config.py  dependencies.py  main.py  models.py
architect/: json_exporter.py  pattern_generator.py  static_checker.py  volatility3_exporter.py  yara_exporter.py
core/: __init__.py  alignment_filter.py  classify.py  config_schema.py  constants.py  dataset_metadata.py  discovery.py  display_labels.py  dump_driver.py  dump_io.py  dump_search.py  dump_source.py  entropy.py  format_detect.py  input_schemas.py  kdf.py  kdf_base.py  kdf_registry.py  kdf_ssh.py  kdf_tls.py  keylog.py  keylog_templates.py  log.py  models.py  msl_helpers.py  phase_normalizer.py  proc_maps_parser.py  protocols.py  region_align.py  region_analysis.py  strings.py  structure_defs.py  structure_library.py  structure_library_ssh.py  structure_library_tls.py  structure_loader.py  structure_overlay.py  structure_schema.py  variance.py
docs/: conf.py  index.md  requirements.txt
engine/: batch.py  batch_task_runner.py  brute_force.py  cancellation.py  candidate_pipeline.py  consensus.py  consensus_msl.py  convergence.py  correlator.py  derived_keys.py  diff_store.py  experiment_task_runner.py  nsweep.py  oracle.py  pipeline.py  pipeline_runner.py  progress.py  project_db.py  results.py  serializer.py  session_store.py  verification.py  vol3_emit.py  worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
harvester/: ingestor.py  metadata_store.py  sidecar.py
mcp_server/: __init__.py  server.py  session.py  tools.py  tools_inspect.py  tools_pipeline.py  tools_xref.py
msl/: __init__.py  block_iter.py  block_tree.py  compress.py  crypto.py  decoders.py  decoders_ext.py  enums.py  hashing.py  importer.py  integrity.py  key_extract.py  page_map.py  reader.py  session_extract.py  string_extract.py  types.py  writer.py  xref_resolver.py
scripts/: build_logo.py  check-no-hex-literals.mjs  check-no-tailwind-colour-literals.mjs  colour-literal-baseline.txt  ground-truth-run0001.json  ground-truth-run0001.py  precompute_pipeline_fixtures.py  stitch_triptych.py  test-e2e.sh  test_bookmark_persistence.py  test_hex_chunk_rerender.py  test_pipeline_ui.py  test_tours.py  test_verify_and_auto_export.py  test_workspace_shortcuts.py
tests/: _paths.py  _task_runners.py  conftest.py  e2e_analysis_test_manual.py  e2e_fixes_test.py  e2e_session_cycle_test.py  e2e_session_features_test.py  e2e_workspace_issues_test.py  e2e_workspace_test_manual.py  test_aes_e2e.py  test_algorithms.py  test_api.py  (+123 more)
(+376 files in other folders)
